# claudecode_plugins

./: .gitignore  .markdownlintrc.json  CI.py  README.md  pyproject.toml
.claude/: settings.local.json  settings.local.json.bak
.claude-plugin/: marketplace.json
.claude/commands/: create-plugin.md  slash-analyzer.md  update-memories.md  validate-langgraph.md
.serena/: project.yml
.serena/memories/: claude-code-hooks-format.md  langgraph-langchain-langsmith-agents-2025.md
docs/: 01-estrutura-do-repositorio.md  02-configuracao-marketplace.md  03-criando-plugin.md  04-componentes-plugin.md  05-publicacao-e-distribuicao.md  README.md  feedback-claude-skills-agents-scope.md
plugins/agentc-ai-developer/: .mcp.json  CHANGELOG.md  README.md
plugins/agentc-ai-developer/.claude-plugin/: plugin.json
plugins/aws-documentation-helper/: LICENSE  README.md
plugins/code-review/: CHANGELOG.md  README.md  plugin.json
plugins/composio-documentation-helper/: README.md
plugins/git-commit-helper/: CHANGELOG.md  README.md
plugins/github-actions-cicd/: README.md
plugins/incremental-dev/: CHANGELOG.md  README.md
plugins/kubernetes-specialist/: .env.example  .mcp.json  CHANGELOG.md  README.md
plugins/langchain-ecosystem-helper/: .mcp.json  README.md
plugins/langchain-langgraph-specialist/: .mcp.json  README.md
plugins/llm-eval-developer/: CHANGELOG.md  README.md
plugins/python-test-generator/: CHANGELOG.md  README.md  plugin.json
plugins/serena-mcp-helper/: LICENSE  README.md
plugins/systemic-agent-orchestrator/: README.md
(+235 files in other folders)
